# max-desktop

./: ChangeLog  Makefile  check-repo.sh  is_updated.sh
max-artwork/: Makefile.in  aclocal.m4  autogen.sh  configure  configure.in
max-artwork/art/: Makefile.am  Makefile.in  beta.xcf  testpage-a4.xcf
max-artwork/art/gdm/: Makefile.in
max-artwork/art/gdm/Max/: Makefile.am  Makefile.in  Max.xml  configure-max-gdm
max-artwork/art/gnome/: Makefile.in
max-artwork/art/gnome/MaxColors/: Makefile  Makefile.in
max-artwork/art/gnome/MaxPlain/: Makefile  Makefile.am  Makefile.in
max-artwork/art/grub/: Makefile.am  Makefile.in  grub_background.sh
max-artwork/art/gtk/: Makefile.am  Makefile.in
max-artwork/art/gtk/MaxColors/: Makefile.am  Makefile.in  gtkrc
max-artwork/art/homepage/: Makefile.am  Makefile.in  index.html  max.css
max-artwork/art/icons/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/: Makefile.am  Makefile.in  index.theme
max-artwork/art/icons/Tango-Brown/16x16/: Makefile.in
max-artwork/art/icons/Tango-Brown/16x16/actions/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/16x16/apps/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/16x16/categories/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/16x16/devices/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/16x16/emblems/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/16x16/emotes/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/16x16/mimetypes/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/16x16/places/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/16x16/status/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/22x22/: Makefile.in
max-artwork/art/icons/Tango-Brown/22x22/actions/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/22x22/apps/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/22x22/categories/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/22x22/devices/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/22x22/emblems/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/22x22/emotes/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/22x22/mimetypes/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/22x22/places/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/22x22/status/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/24x24/: Makefile.in
max-artwork/art/icons/Tango-Brown/24x24/actions/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/24x24/apps/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/24x24/categories/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/24x24/devices/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/24x24/emblems/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/24x24/emotes/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/24x24/mimetypes/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/24x24/places/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/24x24/status/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/scalable/: Makefile.in
max-artwork/art/icons/Tango-Brown/scalable/actions/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/scalable/apps/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/scalable/categories/: Makefile.am  Makefile.in
max-artwork/art/icons/Tango-Brown/scalable/devices/: Makefile.am  Makefile.in
max-artwork/art/icons/gartoon/: Makefile.am  Makefile.in
max-artwork/art/icons/maxtoon/: GPL.txt  Makefile  Makefile.am  Makefile.in  README  index.theme
max-artwork/art/icons/maxtoon/scalable/: 0ALIAS
max-artwork/art/metacity/: Makefile.am  Makefile.in
max-artwork/art/metacity/MAXborde/: Makefile.am  metacity-theme-1.xml
max-artwork/art/metacity/MaxColors/: Makefile.am  Makefile.in  metacity-theme-1.xml
max-artwork/art/plymouth/: Makefile.am  Makefile.in
max-artwork/art/plymouth/max-logo/: Makefile.am  Makefile.in  max-logo.script
max-artwork/art/splash/: Makefile.in
max-artwork/art/theme/: Makefile.am  Makefile.in
max-artwork/art/theme/Max40/: Makefile.am  index.theme
max-artwork/art/theme/Max50/: Makefile.am  Makefile.in  index.theme
max-artwork/art/theme/Max60/: Makefile.am  Makefile.in  index.theme
max-artwork/art/theme/Max65/: Makefile.am  Makefile.in  index.theme
max-artwork/art/theme/Max70/: Makefile.am  Makefile.in  index.theme
max-artwork/art/theme/Max70/gtk-2.0/: gtkrc
max-artwork/art/theme/Max70/gtk-3.0/: gtk.css  settings.ini
max-artwork/art/theme/Max70/gtk-3.0/apps/: nautilus.css
max-artwork/art/theme/Max70/metacity-1/: metacity-theme-1.xml  metacity-theme-2.xml  metacity-theme-3.xml
max-artwork/art/theme/MaxTheme/: Makefile.am  Makefile.am.old  Makefile.in  generate-makefile-am.sh  index.theme
max-artwork/art/theme/MaxTheme/gtk-2.0/: gtkrc
max-artwork/art/theme/MaxTheme/gtk-3.0/: gtk-main.css  gtk-widgets.css  settings.ini
max-artwork/art/theme/MaxTheme/metacity-1/: metacity-theme-2.xml  metacity-theme-3.xml
max-artwork/art/usplash/: Makefile  howto.palete.url  max-splash.c  max50-usplash.gpl  palete.txt  test.sh  usplash-test.sh
max-artwork/art/wallpapers/: Makefile.am  Makefile.in  max-wallpapers.xml  max-wallpapers.xml.in  readme_symlinks.txt
max-artwork/art/xsplash/: Makefile.am  Makefile.in
max-artwork/autom4te.cache/: output.1  requests  traces.0  traces.1
max-artwork/debian/: changelog  control  gdm-cdd.conf  max-artwork-usplash.install  max-artwork-usplash.postinst  max-artwork-usplash.prerm  max-artwork.dirs  max-artwork.install  max-artwork.links  max-artwork.postinst  max-artwork.postrm  max-artwork.preinst  max-artwork.templates  rules
max-artwork/debian/gconf/: default  plain  young
max-artwork/po/: Makefile.in  POTFILES
trunk20080616/max-artwork/art/icons/maxtoon/: AUTHORS  Makefile  Makefile.am  Makefile.in
trunk20080616/max-artwork/art/wallpapers/: Makefile.am
(+6444 files in other folders)
