AC_INIT(art)
AC_PREREQ(2.52)

MAJOR_VERSION=0
MINOR_VERSION=1
MICRO_VERSION=0
VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION

AM_INIT_AUTOMAKE(max-artwork, $VERSION)

AC_SUBST(MAJOR_VERSION)
AC_SUBST(MINOR_VERSION)
AC_SUBST(MICRO_VERSION)

AC_DEFINE_UNQUOTED(MAJOR_VERSION, $MAJOR_VERSION, [Major Version Number])
AC_DEFINE_UNQUOTED(MINOR_VERSION, $MINOR_VERSION, [Minor Version Number])
AC_DEFINE_UNQUOTED(MICRO_VERSION, $MICRO_VERSION, [Micro Version Number])

AM_MAINTAINER_MODE

AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, max-artwork, [foo])
GETTEXT_PACKAGE=max-artwork
AC_SUBST(GETTEXT_PACKAGE)
AC_PROG_INTLTOOL([0.1.0])
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
art/Makefile
art/gdm/Makefile
art/gdm/Max/Makefile
art/gnome/Makefile
art/gnome/MaxColors/Makefile
art/gnome/MaxPlain/Makefile
art/gtk/Makefile
art/gtk/MaxColors/Makefile
art/homepage/Makefile
art/splash/Makefile
art/wallpapers/Makefile
art/metacity/Makefile
art/metacity/MaxColors/Makefile
art/icons/Makefile
art/icons/gartoon/Makefile
art/icons/Tango-Brown/Makefile
art/icons/Tango-Brown/16x16/Makefile
art/icons/Tango-Brown/16x16/actions/Makefile
art/icons/Tango-Brown/16x16/apps/Makefile
art/icons/Tango-Brown/16x16/categories/Makefile
art/icons/Tango-Brown/16x16/devices/Makefile
art/icons/Tango-Brown/16x16/emblems/Makefile
art/icons/Tango-Brown/16x16/emotes/Makefile
art/icons/Tango-Brown/16x16/mimetypes/Makefile
art/icons/Tango-Brown/16x16/places/Makefile
art/icons/Tango-Brown/16x16/status/Makefile
art/icons/Tango-Brown/22x22/Makefile
art/icons/Tango-Brown/22x22/actions/Makefile
art/icons/Tango-Brown/22x22/apps/Makefile
art/icons/Tango-Brown/22x22/categories/Makefile
art/icons/Tango-Brown/22x22/devices/Makefile
art/icons/Tango-Brown/22x22/emblems/Makefile
art/icons/Tango-Brown/22x22/emotes/Makefile
art/icons/Tango-Brown/22x22/mimetypes/Makefile
art/icons/Tango-Brown/22x22/places/Makefile
art/icons/Tango-Brown/22x22/status/Makefile
art/icons/Tango-Brown/24x24/Makefile
art/icons/Tango-Brown/24x24/actions/Makefile
art/icons/Tango-Brown/24x24/apps/Makefile
art/icons/Tango-Brown/24x24/categories/Makefile
art/icons/Tango-Brown/24x24/devices/Makefile
art/icons/Tango-Brown/24x24/emblems/Makefile
art/icons/Tango-Brown/24x24/emotes/Makefile
art/icons/Tango-Brown/24x24/mimetypes/Makefile
art/icons/Tango-Brown/24x24/places/Makefile
art/icons/Tango-Brown/24x24/status/Makefile
art/icons/Tango-Brown/scalable/Makefile
art/icons/Tango-Brown/scalable/actions/Makefile
art/icons/Tango-Brown/scalable/apps/Makefile
art/icons/Tango-Brown/scalable/categories/Makefile
art/icons/Tango-Brown/scalable/devices/Makefile
art/icons/Tango-Brown/scalable/emblems/Makefile
art/icons/Tango-Brown/scalable/emotes/Makefile
art/icons/Tango-Brown/scalable/mimetypes/Makefile
art/icons/Tango-Brown/scalable/places/Makefile
art/icons/Tango-Brown/scalable/status/Makefile
po/Makefile.in
])

echo "
Configuration:

  Source: ${srcdir}
  Prefix: ${prefix}
"
