wallpaperdir = $(datadir)/backgrounds
wallpaper_DATA = \
	max-madrid-linux-1600x1200.jpg \
	max-madrid-linux-1900x1200.jpg \
	max-madrid-linux-v2-1600x1200.jpg \
	max-madrid-linux-v2-1900x1200.jpg \
	max-madrid-linux-infantil-1600x1200.jpg \
	max-madrid-linux-infantil-1900x1200.jpg

propsdir = $(datadir)/gnome-background-properties
props_DATA = \
	max-wallpapers.xml


EXTRA_DIST = $(wallpaper_DATA) $(props_DATA)

