wallpaperdir = $(datadir)/backgrounds
wallpaper_DATA = \
	max-madrid-linux-1600x1200.png \
	max-madrid-linux-1900x1200.png \
	max-madrid-linux-1920x1080.png \
	max-madrid-linux-1600x1200_puente.png \
	max-madrid-linux-1900x1200_puente.png \
	max-madrid-linux-1920x1080_puente.png \
	max-madrid-linux-infantil-1600x1200.png \
	max-madrid-linux-infantil-1900x1200.png \
	max-madrid-linux-infantil-1920x1080.png \
	max-madrid-linux-1600x1200-bn.png \
        max-madrid-linux-1900x1200-bn.png \
        max-madrid-linux-1920x1080-bn.png
        #max-madrid-linux-3D-1600x1200.png \
        #max-madrid-linux-3D-1900x1200.png \
        #max-madrid-linux-3D-1920x1080.png


propsdir = $(datadir)/gnome-background-properties
props_DATA = \
	max-wallpapers.xml


EXTRA_DIST = $(wallpaper_DATA) $(props_DATA)

