max_in_files = \
	GdmGreeterTheme.desktop.in

maxdir = $(datadir)/gdm/themes/Max
max_DATA = \
	background.png \
	GdmGreeterTheme.desktop \
	Max.xml \
	icon-language-active.png \
	icon-language.png \
	icon-language-prelight.png \
	icon-reboot-active.png \
	icon-reboot.png \
	icon-reboot-prelight.png \
	icon-session-active.png \
	icon-session.png \
	icon-session-prelight.png \
	icon-shutdown-active.png \
	icon-shutdown.png \
	icon-shutdown-prelight.png \
	screenshot.png \
	max.png

@INTLTOOL_XML_RULE@
@INTLTOOL_DESKTOP_RULE@

EXTRA_DIST = $(max_DATA) $(max_in_files)

DISTCLEANFILES = \
	GdmGreeterTheme.desktop
