themedir = $(datadir)/themes/MAXborde/metacity-1
theme_DATA = \
	metacity-theme-1.xml \
	bottom_left.png \
	bottom.png \
	bottom_right.png \
	button-close-focused.png \
	button-close-pressed.png \
	button-close-unfocused.png \
	button-maximize-focused.png \
	button-maximize-pressed.png \
	button-maximize-unfocused.png \
	button-menu-focused.png \
	button-menu-normal.png \
	button-menu-pressed.png \
	button-menu-unfocused.png \
	button-minimize-focused.png \
	button-minimize-pressed.png \
	button-minimize-unfocused.png \
	left.png \
	right.png \
	top_left.png \
	top.png \
	top_right.png \
	un_top_left.png \
	un_top.png \
	un_top_right.png

EXTRA_DIST = $(theme_DATA)
