gtk3dir = /usr/share/themes/MaxTheme/gtk-3.0
gtk3_DATA = \
    gtk-3.0/gtk-widgets-borders-radiance.css \
    gtk-3.0/gtk.css \
    gtk-3.0/gtk-widgets-backdrop.css \
    gtk-3.0/gtk-widgets-assets.css \
    gtk-3.0/gtk-widgets.css \
    gtk-3.0/gtk-main.css \
    gtk-3.0/gtk-widgets-assets-radiance.css \
    gtk-3.0/gtk-widgets-radiance.css \
    gtk-3.0/gtk-widgets-borders.css \
    gtk-3.0/settings.ini



gtk3appsdir = /usr/share/themes/MaxTheme/gtk-3.0/apps
gtk3apps_DATA = \
    gtk-3.0/apps/unity.css \
    gtk-3.0/apps/glade.css \
    gtk-3.0/apps/gnome-panel.css \
    gtk-3.0/apps/gedit.css \
    gtk-3.0/apps/gnome-system-log.css \
    gtk-3.0/apps/baobab.css \
    gtk-3.0/apps/nautilus.css \
    gtk-3.0/apps/gnome-terminal.css



gtk3assetsdir = /usr/share/themes/MaxTheme/gtk-3.0/assets
gtk3assets_DATA = \
    gtk-3.0/assets/radio-mixed-disabled-alt.png \
    gtk-3.0/assets/scale-vertical-trough-disabled.png \
    gtk-3.0/assets/backdrop-radio-unselected-hover.png \
    gtk-3.0/assets/radiance-backdrop-button-toolbar.png \
    gtk-3.0/assets/button-active-focused.png \
    gtk-3.0/assets/check-unselected-disabled.png \
    gtk-3.0/assets/scale-horizontal-trough-disabled.png \
    gtk-3.0/assets/notebook-tab-right.png \
    gtk-3.0/assets/backdrop-radio-mixed-alt.png \
    gtk-3.0/assets/button-default.png \
    gtk-3.0/assets/backdrop-button.png \
    gtk-3.0/assets/check-unselected-hover.png \
    gtk-3.0/assets/backdrop-entry.png \
    gtk-3.0/assets/backdrop-radio-mixed-disabled-alt.png \
    gtk-3.0/assets/backdrop-check-selected-disabled-alt.png \
    gtk-3.0/assets/backdrop-radio-unselected-disabled.png \
    gtk-3.0/assets/radiance-combobox-button-toolbar-focused.png \
    gtk-3.0/assets/backdrop-check-unselected-hover.png \
    gtk-3.0/assets/backdrop-radio-unselected-alt.png \
    gtk-3.0/assets/button-active-hover.png \
    gtk-3.0/assets/slider_backdrop.png \
    gtk-3.0/assets/backdrop-radio-mixed.png \
    gtk-3.0/assets/combobox-button-disabled.png \
    gtk-3.0/assets/backdrop-check-selected-hover.png \
    gtk-3.0/assets/radio-unselected-disabled.png \
    gtk-3.0/assets/switch-button-off-disabled.png \
    gtk-3.0/assets/progressbar-vertical-fill-backdrop.png \
    gtk-3.0/assets/radiance-button-toolbar-active.png \
    gtk-3.0/assets/slider_insensitive.png \
    gtk-3.0/assets/check-mixed.png \
    gtk-3.0/assets/backdrop-radio-selected-hover.png \
    gtk-3.0/assets/scrollbar_handle.png \
    gtk-3.0/assets/radio-menuitem-insensitive-dark.png \
    gtk-3.0/assets/backdrop-check-selected-hover-alt.png \
    gtk-3.0/assets/switch-trough-on.png \
    gtk-3.0/assets/backdrop-check-unselected-alt.png \
    gtk-3.0/assets/combobox-button-focused.png \
    gtk-3.0/assets/check-selected-alt.png \
    gtk-3.0/assets/radio-selected.png \
    gtk-3.0/assets/scale-horizontal-trough.png \
    gtk-3.0/assets/radio-unselected-disabled-alt.png \
    gtk-3.0/assets/combobox-button.png \
    gtk-3.0/assets/slider-vertical.png \
    gtk-3.0/assets/slider_vertical.png \
    gtk-3.0/assets/button-default-focused.png \
    gtk-3.0/assets/scale-horizontal-fill-disabled.png \
    gtk-3.0/assets/check-unselected-disabled-alt.png \
    gtk-3.0/assets/progressbar-vertical-fill.png \
    gtk-3.0/assets/check-selected-hover-alt.png \
    gtk-3.0/assets/backdrop-button-hover.png \
    gtk-3.0/assets/backdrop-check-selected-alt.png \
    gtk-3.0/assets/combobox-entry-disabled.png \
    gtk-3.0/assets/check-menuitem.png \
    gtk-3.0/assets/backdrop-button-active-hover.png \
    gtk-3.0/assets/radio-selected-disabled.png \
    gtk-3.0/assets/progressbar-horizontal-fill-backdrop.png \
    gtk-3.0/assets/button-focused.png \
    gtk-3.0/assets/entry-toolbar.png \
    gtk-3.0/assets/backdrop-radio-selected-disabled.png \
    gtk-3.0/assets/radio-unselected-alt.png \
    gtk-3.0/assets/radio-selected-hover-alt.png \
    gtk-3.0/assets/slider.png \
    gtk-3.0/assets/switch-button-on.png \
    gtk-3.0/assets/radio-mixed-disabled.png \
    gtk-3.0/assets/entry.png \
    gtk-3.0/assets/radiance-backdrop-button-toolbar-active.png \
    gtk-3.0/assets/notebook-tab-bottom.png \
    gtk-3.0/assets/check-mixed-disabled.png \
    gtk-3.0/assets/radiance-entry-toolbar-focused.png \
    gtk-3.0/assets/slider_vertical_insensitive.png \
    gtk-3.0/assets/combobox-entry-focused.png \
    gtk-3.0/assets/combobox-button-toolbar.png \
    gtk-3.0/assets/slider-horizontal-hover.png \
    gtk-3.0/assets/button-disabled.png \
    gtk-3.0/assets/progressbar-horizontal-fill.png \
    gtk-3.0/assets/backdrop-button-active.png \
    gtk-3.0/assets/scale-vertical-fill-disabled.png \
    gtk-3.0/assets/combobox-arrow-disabled.png \
    gtk-3.0/assets/button-toolbar.png \
    gtk-3.0/assets/check-mixed-alt.png \
    gtk-3.0/assets/backdrop-check-unselected-hover-alt.png \
    gtk-3.0/assets/scale-horizontal-fill-backdrop.png \
    gtk-3.0/assets/button.png \
    gtk-3.0/assets/radiance-combobox-button-toolbar-pressed-focused.png \
    gtk-3.0/assets/check-selected-disabled-alt.png \
    gtk-3.0/assets/combobox-entry.png \
    gtk-3.0/assets/slider-horizontal-focused-hover.png \
    gtk-3.0/assets/backdrop-check-selected-disabled.png \
    gtk-3.0/assets/check-menuitem-unselected.png \
    gtk-3.0/assets/radiance-combobox-button-toolbar.png \
    gtk-3.0/assets/check-unselected-hover-alt.png \
    gtk-3.0/assets/backdrop-check-unselected-disabled-alt.png \
    gtk-3.0/assets/backdrop-radio-selected.png \
    gtk-3.0/assets/radiance-button-toolbar-focused.png \
    gtk-3.0/assets/backdrop-radio-selected-disabled-alt.png \
    gtk-3.0/assets/scrollbar_handle_vertical.png \
    gtk-3.0/assets/check-selected.png \
    gtk-3.0/assets/backdrop-check-mixed-disabled.png \
    gtk-3.0/assets/switch-trough-toolbar-off.png \
    gtk-3.0/assets/backdrop-combobox-button.png \
    gtk-3.0/assets/combobox-button-pressed-focused.png \
    gtk-3.0/assets/radio-unselected-hover.png \
    gtk-3.0/assets/check-menuitem-insensitive.png \
    gtk-3.0/assets/backdrop-radio-mixed-hover.png \
    gtk-3.0/assets/radio-selected-hover.png \
    gtk-3.0/assets/backdrop-radio-unselected-disabled-alt.png \
    gtk-3.0/assets/button-default-focused-hover.png \
    gtk-3.0/assets/entry-focused.png \
    gtk-3.0/assets/button-hover.png \
    gtk-3.0/assets/scale-horizontal-fill.png \
    gtk-3.0/assets/scale-vertical-trough.png \
    gtk-3.0/assets/radio-selected-alt.png \
    gtk-3.0/assets/backdrop-radio-mixed-disabled.png \
    gtk-3.0/assets/radio-unselected.png \
    gtk-3.0/assets/scale-horizontal-trough-backdrop.png \
    gtk-3.0/assets/slider-vertical-focused.png \
    gtk-3.0/assets/scale-vertical-trough-backdrop.png \
    gtk-3.0/assets/backdrop-button-disabled.png \
    gtk-3.0/assets/backdrop-check-mixed-disabled-alt.png \
    gtk-3.0/assets/button-toolbar-active-focused.png \
    gtk-3.0/assets/backdrop-combobox-button-disabled.png \
    gtk-3.0/assets/check-menuitem-dark.png \
    gtk-3.0/assets/check-mixed-hover.png \
    gtk-3.0/assets/backdrop-radio-unselected-hover-alt.png \
    gtk-3.0/assets/switch-trough-disabled.png \
    gtk-3.0/assets/notebook-tab-top.png \
    gtk-3.0/assets/notebook-tab-left.png \
    gtk-3.0/assets/button-toolbar-focused.png \
    gtk-3.0/assets/backdrop-button-toolbar-active.png \
    gtk-3.0/assets/backdrop-check-unselected-disabled.png \
    gtk-3.0/assets/combobox-button-toolbar-focused.png \
    gtk-3.0/assets/backdrop-check-selected.png \
    gtk-3.0/assets/backdrop-radio-mixed-hover-alt.png \
    gtk-3.0/assets/backdrop-check-mixed.png \
    gtk-3.0/assets/backdrop-combobox-entry-disabled.png \
    gtk-3.0/assets/check-unselected.png \
    gtk-3.0/assets/radiance-button-toolbar-active-focused.png \
    gtk-3.0/assets/check-selected-disabled.png \
    gtk-3.0/assets/slider-vertical-hover.png \
    gtk-3.0/assets/button-active-disabled.png \
    gtk-3.0/assets/button-default-hover.png \
    gtk-3.0/assets/slider_vertical_insensitive_backdrop.png \
    gtk-3.0/assets/radio-menuitem-insensitive.png \
    gtk-3.0/assets/radio-menuitem.png \
    gtk-3.0/assets/button-active-focused-hover.png \
    gtk-3.0/assets/radio-mixed.png \
    gtk-3.0/assets/check-unselected-alt.png \
    gtk-3.0/assets/scale-vertical-fill-backdrop.png \
    gtk-3.0/assets/combobox-arrow.png \
    gtk-3.0/assets/slider-vertical-focused-hover.png \
    gtk-3.0/assets/switch-trough-off.png \
    gtk-3.0/assets/radiance-entry-toolbar.png \
    gtk-3.0/assets/slider-horizontal.png \
    gtk-3.0/assets/slider-horizontal-focused.png \
    gtk-3.0/assets/frame.png \
    gtk-3.0/assets/backdrop-button-active-disabled.png \
    gtk-3.0/assets/check-selected-hover.png \
    gtk-3.0/assets/check-mixed-disabled-alt.png \
    gtk-3.0/assets/slider_prelight.png \
    gtk-3.0/assets/entry-disabled.png \
    gtk-3.0/assets/slider-horizontal-disabled.png \
    gtk-3.0/assets/radio-unselected-hover-alt.png \
    gtk-3.0/assets/switch-button-off.png \
    gtk-3.0/assets/progressbar-horizontal-trough.png \
    gtk-3.0/assets/check-menuitem-insensitive-dark.png \
    gtk-3.0/assets/backdrop-check-unselected.png \
    gtk-3.0/assets/radio-menuitem-dark.png \
    gtk-3.0/assets/radio-selected-disabled-alt.png \
    gtk-3.0/assets/backdrop-check-mixed-alt.png \
    gtk-3.0/assets/slider_vertical_backdrop.png \
    gtk-3.0/assets/radio-mixed-hover.png \
    gtk-3.0/assets/backdrop-entry-disabled.png \
    gtk-3.0/assets/entry-toolbar-focused.png \
    gtk-3.0/assets/radio-mixed-alt.png \
    gtk-3.0/assets/button-active.png \
    gtk-3.0/assets/switch-trough-toolbar-on.png \
    gtk-3.0/assets/radio-mixed-hover-alt.png \
    gtk-3.0/assets/slider-vertical-disabled.png \
    gtk-3.0/assets/radiance-button-toolbar.png \
    gtk-3.0/assets/combobox-button-toolbar-pressed-focused.png \
    gtk-3.0/assets/progressbar-vertical-trough.png \
    gtk-3.0/assets/backdrop-combobox-entry.png \
    gtk-3.0/assets/check-mixed-hover-alt.png \
    gtk-3.0/assets/switch-button-on-disabled.png \
    gtk-3.0/assets/button-toolbar-active.png \
    gtk-3.0/assets/backdrop-radio-selected-alt.png \
    gtk-3.0/assets/switch-trough-focused.png \
    gtk-3.0/assets/slider_prelight_vertical.png \
    gtk-3.0/assets/backdrop-radio-unselected.png \
    gtk-3.0/assets/backdrop-button-toolbar.png \
    gtk-3.0/assets/backdrop-check-mixed-hover-alt.png \
    gtk-3.0/assets/backdrop-radio-selected-hover-alt.png \
    gtk-3.0/assets/backdrop-check-mixed-hover.png \
    gtk-3.0/assets/button-focused-hover.png \
    gtk-3.0/assets/scale-vertical-fill.png \
    gtk-3.0/assets/slider_insensitive_backdrop.png



metacity1dir = /usr/share/themes/MaxTheme/metacity-1
metacity1_DATA = \
    metacity-1/metacity-theme-3.xml \
    metacity-1/metacity-theme-2.xml



gtk2dir = /usr/share/themes/MaxTheme/gtk-2.0
gtk2_DATA = \
    gtk-2.0/gtkrc



gtkappsdir = /usr/share/themes/MaxTheme/gtk-2.0/apps
gtkapps_DATA = \
    gtk-2.0/apps/ff.rc \
    gtk-2.0/apps/nautilus.rc \
    gtk-2.0/apps/chromium.rc \
    gtk-2.0/apps/banshee.rc \
    gtk-2.0/apps/gnome-terminal.rc



unitydir = /usr/share/themes/MaxTheme/unity
unity_DATA = \
    unity/unmaximize_unfocused_pressed.png \
    unity/minimize.png \
    unity/unmaximize_focused_prelight.png \
    unity/unmaximize.png \
    unity/maximize_focused_pressed.png \
    unity/unmaximize_unfocused.png \
    unity/unmaximize_unfocused_prelight.png \
    unity/minimize_focused_prelight.png \
    unity/minimize_unfocused.png \
    unity/close_focused_normal.png \
    unity/minimize_focused_pressed.png \
    unity/maximize_unfocused.png \
    unity/minimize_unfocused_pressed.png \
    unity/maximize.png \
    unity/unmaximize_focused_pressed.png \
    unity/maximize_focused_prelight.png \
    unity/unmaximize_focused_normal.png \
    unity/maximize_unfocused_pressed.png \
    unity/maximize_unfocused_prelight.png \
    unity/close.png \
    unity/minimize_unfocused_prelight.png \
    unity/maximize_focused_normal.png \
    unity/minimize_focused_normal.png \
    unity/close_unfocused_prelight.png \
    unity/close_focused_pressed.png \
    unity/close_unfocused_pressed.png \
    unity/close_focused_prelight.png \
    unity/close_unfocused.png


themedir = /usr/share/themes/MaxTheme
theme_DATA = index.theme

EXTRA_DIST = $(theme_DATA)      \
             $(metacity_DATA)   \
             $(gtk2_DATA)       \
             $(gtk2apps_DATA)   \
             $(gtk3_DATA)       \
             $(gtk3apps_DATA)   \
             $(gtk3assets_DATA) \
             $(unity_DATA)
