themedir=/usr/share/icons/Tango-Brown
size = 16x16
context=apps

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA =                            \
	accessibility-directory.png	\
	accessories-calculator.png	\
	accessories-character-map.png	\
	accessories-text-editor.png	\
	access.png	\
	arts.png	\
	background.png	\
	browser.png	\
	calc.png	\
	config-language.png	\
	config-users.png	\
	date.png	\
	email.png	\
	file-manager.png	\
	fonts.png	\
	gnome-calculator.png	\
	gnome-help.png	\
	gnome-mixer.png	\
	gnome-monitor.png	\
	gnome-remote-desktop.png	\
	gnome-session.png	\
	gnome-settings-accessibility-technologies.png	\
	gnome-settings-background.png	\
	gnome-settings-font.png	\
	gnome-settings-keybindings.png	\
	gnome-settings-sound.png	\
	gnome-settings-theme.png	\
	gnome-terminal.png	\
	gnome-window-manager.png	\
	gtk-help.png	\
	gucharmap.png	\
	help-browser.png	\
	help.png	\
	internet-group-chat.png	\
	internet-mail.png	\
	internet-news-reader.png	\
	internet-web-browser.png	\
	kcalc.png	\
	kcharselect.png	\
	kcmkwm.png	\
	kcmsound.png	\
	kedit.png	\
	key_bindings.png	\
	kfm.png	\
	khelpcenter.png	\
	knotify.png	\
	konsole.png	\
	krfb.png	\
	kscreensaver.png	\
	ksysguard.png	\
	kuser.png	\
	kwin.png	\
	locale.png	\
	mail_generic.png	\
	multimedia.png	\
	multimedia-volume-control.png	\
	office-calendar.png	\
	openterm.png	\
	preferences-desktop-accessibility.png	\
	preferences-desktop-assistive-technology.png	\
	preferences-desktop-font.png	\
	preferences-desktop-keyboard-shortcuts.png	\
	preferences-desktop-locale.png	\
	preferences-desktop-remote-desktop.png	\
	preferences-desktop-screensaver.png	\
	preferences-desktop-sound.png	\
	preferences-desktop-theme.png	\
	preferences-desktop-wallpaper.png	\
	preferences-system-network-proxy.png	\
	preferences-system-session.png	\
	preferences-system-windows.png	\
	proxy-config.png	\
	proxy.png	\
	redhat-email.png	\
	redhat-filemanager.png	\
	redhat-web-browser.png	\
	screensaver.png	\
	stock_help.png	\
	stock_proxy.png	\
	style.png	\
	susehelpcenter.png	\
	system-config-users.png	\
	system-file-manager.png	\
	system-installer.png	\
	system-software-update.png	\
	system-users.png	\
	terminal.png	\
	text-editor.png	\
	utilities-system-monitor.png	\
	utilities-terminal.png	\
	wallpaper.png	\
	web-browser.png	\
	xscreensaver.png

EXTRA_DIST =				\
	$(icons_DATA)

install-data-local: install-iconsDATA
