size = 16x16
themedir=/usr/share/icons/Tango-Brown
context=categories

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA =                            \
	applications-accessories.png	\
	applications-development.png	\
	applications-games.png	\
	applications-graphics.png	\
	applications-internet.png	\
	applications-multimedia.png	\
	applications-office.png	\
	applications-other.png	\
	applications-system.png	\
	gnome-applications.png	\
	gnome-control-center.png	\
	gnome-devel.png	\
	gnome-globe.png	\
	gnome-graphics.png	\
	gnome-joystick.png	\
	gnome-multimedia.png	\
	gnome-settings.png	\
	gnome-system.png	\
	gnome-util.png	\
	gtk-preferences.png	\
	input_devices_settings.png	\
	package_development.png	\
	package_games.png	\
	package_graphics.png	\
	package_multimedia.png	\
	package_network.png	\
	package_office.png	\
	package_settings.png	\
	package_system.png	\
	package_utilities.png	\
	preferences-desktop-peripherals.png	\
	preferences-desktop.png	\
	preferences-system.png	\
	redhat-accessories.png	\
	redhat-games.png	\
	redhat-graphics.png	\
	redhat-internet.png	\
	redhat-office.png	\
	redhat-preferences.png	\
	redhat-programming.png	\
	redhat-sound_video.png	\
	redhat-system_settings.png	\
	redhat-system_tools.png	\
	stock_internet.png

EXTRA_DIST =				\
	$(icons_DATA)

install-data-local: install-iconsDATA
